--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -20,9 +20,9 @@
   border-radius: 3px;
 }
 
-.modal-main h2 {
-  margin: 0;
+.modal-main > h2 {
   padding: 0;
+  margin: 0;
   margin-bottom: 18px;
 }
 
@@ -36,8 +36,9 @@
 
 .close-modal {
   text-align: right;
-  padding-top: 10px;
-  padding-right: 10px;
+  padding-top: 3px;
+  padding-right: 3px;
+  margin-bottom: 18px;
 }
 
 .close-modal:hover {
@@ -61,11 +62,37 @@
   margin-right: 9px;
 }
 
+.round-button__save {
+  flex-shrink: 0;
+  height: 30px;
+  width: 30px;
+  background: #C2A061;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto 9px;
+}
+
 .round-button__modal > i {
   font-size: 0.4rem;
   opacity: 0.85;
   padding-left: 1px;
   padding-top: 2px;
+}
+
+.save-conatiner {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  margin: 18px 0 9px 0;
+}
+
+#save-input {
+  flex-shrink: 1;
+  width: 80%;
+  border-radius: 3px;
+  border: 1px #999 solid;
+  padding: 9px;
 }
 
 
